--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ Produce video clips.">
   
   
   <title>SportTacTic</title>
-  <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
-  <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
   <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
   <link rel="stylesheet" href="assets/material-design/css/material-icons.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
@@ -80,7 +80,7 @@ Produce video clips.">
                             VideoCutter</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="javascript:OpenModal('videocutter')">What is VideoCutter&nbsp;</a><a class="text-black dropdown-item text-primary display-4" href="GuideForWindows.html"><span class="socicon socicon-windows mbr-iconfont mbr-iconfont-btn"></span>Guide for Windows&nbsp;</a><a class="text-black dropdown-item text-primary display-4" href="GuideForLinux.html"><span class="fab fa-fw fa-linux mbr-iconfont mbr-iconfont-btn"></span>Guide for Linux&nbsp;</a><a class="text-black dropdown-item text-primary display-4" href="GuideForMacOSX.html"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>Guide for Mac OSX&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Tutorials.html"><span class="mbrib-image-gallery mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
                             Tutorials</a></li>
                     
-                    <li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle display-4" href="#" target="_blank" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" aria-expanded="false"><span class="fas fa-video mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Screen recording</a><div class="dropdown-menu"><a class="text-black text-primary dropdown-item display-4" href="javascript:OpenModal('screenrecording')" aria-expanded="false"><span class="fas fa-question mbr-iconfont mbr-iconfont-btn"></span>How to</a><a class="text-black text-primary dropdown-item display-4" href="https://sporttactic.net/RecordScreen.html" target="_blank" aria-expanded="false"><span class="fas fa-play mbr-iconfont mbr-iconfont-btn"></span>App</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="guidelines.html"><span class="fas fa-fw fa-info-circle mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Guide lines</a></li></ul>
+                    <li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle display-4" href="#" target="_blank" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" aria-expanded="true"><span class="fas fa-video mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Screen recording</a><div class="dropdown-menu"><a class="text-black text-primary dropdown-item display-4" href="javascript:OpenModal('screenrecording')" aria-expanded="false"><span class="fas fa-question mbr-iconfont mbr-iconfont-btn"></span>How to</a><a class="text-black text-primary dropdown-item display-4" href="https://sporttactic.net/RecordScreen.html" target="_blank" aria-expanded="false"><span class="fas fa-play mbr-iconfont mbr-iconfont-btn"></span>App</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="guidelines.html"><span class="fas fa-fw fa-info-circle mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Guide lines</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="javascript:OpenModal('sporttacticfacebook')"><span class="fab fa-fw fa-facebook-square mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
                         Join the Community</a></div>
@@ -132,16 +132,16 @@ Produce video clips.">
             <div class="card p-3 col-12 col-md-4 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="https://sporttactic.net/desktopappfree/v40/" target="_blank"><span class="mbr-iconfont mbri-desktop" style=""></span></a>
-                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop webapp&nbsp;</strong><br><strong>V4.0</strong></h4>
+                        <a href="https://sporttactic.net/desktopappfree/v41/" target="_blank"><span class="mbr-iconfont mbri-desktop" style=""></span></a>
+                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop webapp&nbsp;</strong><br><strong>V4.1</strong></h4>
                     </div>
                 </div>
             </div>
             <div class="card p-3 col-12 col-md-4 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="https://sporttactic.github.io/mobileappfree/v40/" target="_blank"><span class="mbr-iconfont mbrib-devices" style=""></span></a>
-                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Mobile / Tablet webapp V4.0</strong></h4>
+                        <a href="https://sporttactic.github.io/mobileappfree/v41/" target="_blank"><span class="mbr-iconfont mbrib-devices" style=""></span></a>
+                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Mobile / Tablet webapp V4.1</strong></h4>
                     </div>
                 </div>
             </div>
@@ -542,7 +542,7 @@ Relevant and respectful comments. Only use images or video produced by SportTacT
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">website</a> theme</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">This <a href="https://mobirise.site/e" style="color:#aaa;">web page</a> was designed with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9180858051840976"
      crossorigin="anonymous"></script>
   
